# moksha-module-drawer

./: .gitignore  AUTHORS  README  TODO  configure.ac  meson.build  meson_options.txt  module.desktop  module.desktop.in
data/: e-module-drawer.edc  meson.build
po/: LINGUAS  POTFILES.in  ar.po  be.po  cs.po  de.po  drawer.pot  el.po  eo.po  es.po  fi.po  fr.po  hi.po  hr.po  it.po  lt.po  ml.po  mr.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  tr.po  uk.po  zh_CN.po
src/: Drawer.h  e_mod_config.c  e_mod_main.c  e_mod_main.h  meson.build
src/plugins/: meson.build
src/plugins/sources/: Makefile.am  blacklist.c  blacklist.h  directory_watcher.c  directory_watcher.desktop  history.c  history.desktop  history.h  launcher.c  launcher.desktop  meson.build  winlist.c  winlist.desktop
src/plugins/views/: grid.c  grid.desktop  list.c  list.desktop  meson.build
